// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test build all supported characters in all fonts alphabet 1`] = `
[
  "  AA   | AC Banner           ",
  " A  A  | 1.0.0               ",
  " AAAA  |                     ",
  " A  A  | Alan Cândido        ",
  " A  A  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 2`] = `
[
  " BBBB   | AC Banner           ",
  " B   B  | 1.0.0               ",
  " BBBB   |                     ",
  " B   B  | Alan Cândido        ",
  " BBBB   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 3`] = `
[
  "  CCC  | AC Banner           ",
  " C     | 1.0.0               ",
  " C     |                     ",
  " C     | Alan Cândido        ",
  "  CCC  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 4`] = `
[
  " DDD   | AC Banner           ",
  " D  D  | 1.0.0               ",
  " D  D  |                     ",
  " D  D  | Alan Cândido        ",
  " DDD   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 5`] = `
[
  " EEEE  | AC Banner           ",
  " E     | 1.0.0               ",
  " EEE   |                     ",
  " E     | Alan Cândido        ",
  " EEEE  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 6`] = `
[
  " FFFF  | AC Banner           ",
  " F     | 1.0.0               ",
  " FFF   |                     ",
  " F     | Alan Cândido        ",
  " F     | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 7`] = `
[
  "  GGG   | AC Banner           ",
  " G      | 1.0.0               ",
  " G  GG  |                     ",
  " G   G  | Alan Cândido        ",
  "  GGG   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 8`] = `
[
  " H  H  | AC Banner           ",
  " H  H  | 1.0.0               ",
  " HHHH  |                     ",
  " H  H  | Alan Cândido        ",
  " H  H  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 9`] = `
[
  " III  | AC Banner           ",
  "  I   | 1.0.0               ",
  "  I   |                     ",
  "  I   | Alan Cândido        ",
  " III  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 10`] = `
[
  "     J  | AC Banner           ",
  "     J  | 1.0.0               ",
  "     J  |                     ",
  " J   J  | Alan Cândido        ",
  "  JJJ   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 11`] = `
[
  " K  K  | AC Banner           ",
  " K K   | 1.0.0               ",
  " KK    |                     ",
  " K K   | Alan Cândido        ",
  " K  K  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 12`] = `
[
  " L     | AC Banner           ",
  " L     | 1.0.0               ",
  " L     |                     ",
  " L     | Alan Cândido        ",
  " LLLL  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 13`] = `
[
  " M   M  | AC Banner           ",
  " MM MM  | 1.0.0               ",
  " M M M  |                     ",
  " M   M  | Alan Cândido        ",
  " M   M  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 14`] = `
[
  " N   N  | AC Banner           ",
  " NN  N  | 1.0.0               ",
  " N N N  |                     ",
  " N  NN  | Alan Cândido        ",
  " N   N  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 15`] = `
[
  "  OOO   | AC Banner           ",
  " O   O  | 1.0.0               ",
  " O   O  |                     ",
  " O   O  | Alan Cândido        ",
  "  OOO   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 16`] = `
[
  " PPPP   | AC Banner           ",
  " P   P  | 1.0.0               ",
  " PPPP   |                     ",
  " P      | Alan Cândido        ",
  " P      | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 17`] = `
[
  "  QQQ   | AC Banner           ",
  " Q   Q  | 1.0.0               ",
  " Q   Q  |                     ",
  " QQ  Q  | Alan Cândido        ",
  "  QQQQ  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 18`] = `
[
  " RRRR   | AC Banner           ",
  " R   R  | 1.0.0               ",
  " RRRR   |                     ",
  " R R    | Alan Cândido        ",
  " R  RR  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 19`] = `
[
  "  SSS   | AC Banner           ",
  " S      | 1.0.0               ",
  "  SSS   |                     ",
  "     S  | Alan Cândido        ",
  " SSSS   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 20`] = `
[
  " TTTTTT  | AC Banner           ",
  "   TT    | 1.0.0               ",
  "   TT    |                     ",
  "   TT    | Alan Cândido        ",
  "   TT    | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 21`] = `
[
  " U   U  | AC Banner           ",
  " U   U  | 1.0.0               ",
  " U   U  |                     ",
  " U   U  | Alan Cândido        ",
  "  UUU   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 22`] = `
[
  " V     V  | AC Banner           ",
  " V     V  | 1.0.0               ",
  "  V   V   |                     ",
  "   V V    | Alan Cândido        ",
  "    V     | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 23`] = `
[
  " W     W  | AC Banner           ",
  " W     W  | 1.0.0               ",
  " W  W  W  |                     ",
  "  W W W   | Alan Cândido        ",
  "   W W    | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 24`] = `
[
  "X   X  | AC Banner           ",
  " X X   | 1.0.0               ",
  "  X    |                     ",
  " X X   | Alan Cândido        ",
  "X   X  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 25`] = `
[
  " Y   Y   | AC Banner           ",
  "  Y Y    | 1.0.0               ",
  "   Y     |                     ",
  "   Y     | Alan Cândido        ",
  "   Y     | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts alphabet 26`] = `
[
  " ZZZZZ  | AC Banner           ",
  "    Z   | 1.0.0               ",
  "   Z    |                     ",
  "  Z     | Alan Cândido        ",
  " ZZZZZ  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 1`] = `
[
  "  █████▒   | AC Banner           ",
  " ██▒▒▒██▒  | 1.0.0               ",
  " ███████▒  |                     ",
  " ██▒▒▒██▒  | Alan Cândido        ",
  " ██▒  ██▒  | brodao@gmail.com    ",
  " ▒▒▒  ▒▒▒  |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 2`] = `
[
  " ██████▒   | AC Banner           ",
  " ██▒▒▒██▒  | 1.0.0               ",
  " ██████▒▒  |                     ",
  " ██▒▒▒██▒  | Alan Cândido        ",
  " ██████▒▒  | brodao@gmail.com    ",
  " ▒▒▒▒▒▒▒   |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 3`] = `
[
  "  ██████▒  | AC Banner           ",
  " ██▒▒▒▒▒▒  | 1.0.0               ",
  " ██▒       |                     ",
  " ██▒       | Alan Cândido        ",
  " ▒██████▒  | brodao@gmail.com    ",
  "  ▒▒▒▒▒▒▒  |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 4`] = `
[
  " ██████▒   | AC Banner           ",
  " ██▒▒▒██▒  | 1.0.0               ",
  " ██▒  ██▒  |                     ",
  " ██▒  ██▒  | Alan Cândido        ",
  " ██████▒▒  | brodao@gmail.com    ",
  " ▒▒▒▒▒▒▒   |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 5`] = `
[
  " ███████▒  | AC Banner           ",
  " ██▒▒▒▒▒▒  | 1.0.0               ",
  " █████▒    |                     ",
  " ██▒▒▒▒    | Alan Cândido        ",
  " ███████▒  | brodao@gmail.com    ",
  " ▒▒▒▒▒▒▒▒  |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 6`] = `
[
  " ███████▒  | AC Banner           ",
  " ██▒▒▒▒▒▒  | 1.0.0               ",
  " █████▒    |                     ",
  " ██▒▒▒▒    | Alan Cândido        ",
  " ██▒       | brodao@gmail.com    ",
  " ▒▒▒       |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 7`] = `
[
  "  ██████▒   | AC Banner           ",
  " ██▒▒▒▒▒▒   | 1.0.0               ",
  " ██▒  ███▒  |                     ",
  " ██▒   ██▒  | Alan Cândido        ",
  " ▒██████▒▒  | brodao@gmail.com    ",
  "  ▒▒▒▒▒▒▒   |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 8`] = `
[
  " ██▒  ██▒  | AC Banner           ",
  " ██▒  ██▒  | 1.0.0               ",
  " ███████▒  |                     ",
  " ██▒▒▒██▒  | Alan Cândido        ",
  " ██▒  ██▒  | brodao@gmail.com    ",
  " ▒▒▒  ▒▒▒  |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 9`] = `
[
  " ██▒  | AC Banner           ",
  " ██▒  | 1.0.0               ",
  " ██▒  |                     ",
  " ██▒  | Alan Cândido        ",
  " ██▒  | brodao@gmail.com    ",
  " ▒▒▒  |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 10`] = `
[
  "      ██▒  | AC Banner           ",
  "      ██▒  | 1.0.0               ",
  "      ██▒  |                     ",
  " ██   ██▒  | Alan Cândido        ",
  " ▒█████▒▒  | brodao@gmail.com    ",
  "  ▒▒▒▒▒▒   |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 11`] = `
[
  " ██▒  ██▒  | AC Banner           ",
  " ██▒ ██▒▒  | 1.0.0               ",
  " █████▒▒   |                     ",
  " ██▒▒██▒   | Alan Cândido        ",
  " ██▒  ██▒  | brodao@gmail.com    ",
  " ▒▒▒  ▒▒▒  |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 12`] = `
[
  " ██▒       | AC Banner           ",
  " ██▒       | 1.0.0               ",
  " ██▒       |                     ",
  " ██▒       | Alan Cândido        ",
  " ███████▒  | brodao@gmail.com    ",
  " ▒▒▒▒▒▒▒▒  |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 13`] = `
[
  " ███▒   ███▒  | AC Banner           ",
  " ████▒ ████▒  | 1.0.0               ",
  " ██▒████▒██▒  |                     ",
  " ██▒▒██▒▒██▒  | Alan Cândido        ",
  " ██▒ ▒▒▒ ██▒  | brodao@gmail.com    ",
  " ▒▒▒     ▒▒▒  |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 14`] = `
[
  " ███▒   ██▒  | AC Banner           ",
  " ████▒  ██▒  | 1.0.0               ",
  " ██▒██▒ ██▒  |                     ",
  " ██▒▒██▒██▒  | Alan Cândido        ",
  " ██▒ ▒████▒  | brodao@gmail.com    ",
  " ▒▒▒  ▒▒▒▒▒  |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 15`] = `
[
  "  ██████▒   | AC Banner           ",
  " ██▒▒▒▒██▒  | 1.0.0               ",
  " ██▒   ██▒  |                     ",
  " ██▒   ██▒  | Alan Cândido        ",
  " ▒██████▒▒  | brodao@gmail.com    ",
  "  ▒▒▒▒▒▒▒   |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 16`] = `
[
  " ██████▒   | AC Banner           ",
  " ██▒▒▒██▒  | 1.0.0               ",
  " ██████▒▒  |                     ",
  " ██▒▒▒▒▒   | Alan Cândido        ",
  " ██▒       | brodao@gmail.com    ",
  " ▒▒▒       |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 17`] = `
[
  "  ██████▒   | AC Banner           ",
  " ██▒▒▒▒██▒  | 1.0.0               ",
  " ██▒   ██▒  |                     ",
  " ██▒▄▄ ██▒  | Alan Cândido        ",
  " ▒██████▒▒  | brodao@gmail.com    ",
  "  ▒▒▒▀▀▒▒   |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 18`] = `
[
  " ██████▒   | AC Banner           ",
  " ██▒▒▒██▒  | 1.0.0               ",
  " ██████▒▒  |                     ",
  " ██▒▒▒██▒  | Alan Cândido        ",
  " ██▒  ██▒  | brodao@gmail.com    ",
  " ▒▒▒  ▒▒▒  |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 19`] = `
[
  " ███████▒  | AC Banner           ",
  " ██▒▒▒▒▒▒  | 1.0.0               ",
  " ███████▒  |                     ",
  " ▒▒▒▒▒██▒  | Alan Cândido        ",
  " ███████▒  | brodao@gmail.com    ",
  " ▒▒▒▒▒▒▒▒  |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 20`] = `
[
  " ████████▒  | AC Banner           ",
  " ▒▒▒██▒▒▒▒  | 1.0.0               ",
  "    ██▒     |                     ",
  "    ██▒     | Alan Cândido        ",
  "    ██▒     | brodao@gmail.com    ",
  "    ▒▒▒     |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 21`] = `
[
  " ██▒   ██▒  | AC Banner           ",
  " ██▒   ██▒  | 1.0.0               ",
  " ██▒   ██▒  |                     ",
  " ██▒   ██▒  | Alan Cândido        ",
  " ▒██████▒▒  | brodao@gmail.com    ",
  "  ▒▒▒▒▒▒▒   |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 22`] = `
[
  " ██▒   ██▒  | AC Banner           ",
  " ██▒   ██▒  | 1.0.0               ",
  " ██▒   ██▒  |                     ",
  " ▒██▒ ██▒▒  | Alan Cândido        ",
  "  ▒████▒▒   | brodao@gmail.com    ",
  "   ▒▒▒▒▒    |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 23`] = `
[
  " ██▒    ██▒  | AC Banner           ",
  " ██▒    ██▒  | 1.0.0               ",
  " ██▒ █▒ ██▒  |                     ",
  " ██▒███▒██▒  | Alan Cândido        ",
  " ▒███▒███▒▒  | brodao@gmail.com    ",
  "  ▒▒▒▒▒▒▒▒   |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 24`] = `
[
  "  ██▒  ██▒   | AC Banner           ",
  "  ▒██▒██▒▒   | 1.0.0               ",
  "   ▒███▒▒    |                     ",
  "   ██▒██▒    | Alan Cândido        ",
  "  ██▒▒ ██▒   | brodao@gmail.com    ",
  "  ▒▒▒  ▒▒▒   |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 25`] = `
[
  " ██▒   ██▒  | AC Banner           ",
  " ▒██▒ ██▒▒  | 1.0.0               ",
  "  ▒████▒▒   |                     ",
  "   ▒██▒▒    | Alan Cândido        ",
  "    ██▒     | brodao@gmail.com    ",
  "    ▒▒▒     |                     ",
]
`;

exports[`test build all supported characters in all fonts ansi-with-shadow 26`] = `
[
  " ███████▒  | AC Banner           ",
  " ▒▒▒███▒▒  | 1.0.0               ",
  "   ███▒▒   |                     ",
  "  ███▒▒    | Alan Cândido        ",
  " ███████▒  | brodao@gmail.com    ",
  " ▒▒▒▒▒▒▒▒  |                     ",
]
`;

exports[`test build all supported characters in all fonts bar 1`] = `
[
  " ///////  | AC Banner           ",
  " //   //  | 1.0.0               ",
  " ///////  |                     ",
  " //   //  | Alan Cândido        ",
  " //   //  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 2`] = `
[
  " //////   | AC Banner           ",
  " //   //  | 1.0.0               ",
  " //////   |                     ",
  " //   //  | Alan Cândido        ",
  " //////   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 3`] = `
[
  " //////  | AC Banner           ",
  " //      | 1.0.0               ",
  " //      |                     ",
  " //      | Alan Cândido        ",
  " //////  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 4`] = `
[
  " //////    | AC Banner           ",
  " //    //  | 1.0.0               ",
  " //    //  |                     ",
  " //    //  | Alan Cândido        ",
  " //////    | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 5`] = `
[
  " ///////  | AC Banner           ",
  " //       | 1.0.0               ",
  " /////    |                     ",
  " //       | Alan Cândido        ",
  " ///////  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 6`] = `
[
  " ///////  | AC Banner           ",
  " //       | 1.0.0               ",
  " /////    |                     ",
  " //       | Alan Cândido        ",
  " //       | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 7`] = `
[
  "  //////    | AC Banner           ",
  " //         | 1.0.0               ",
  " //    ///  |                     ",
  " //     //  | Alan Cândido        ",
  "  ///////   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 8`] = `
[
  " //   //  | AC Banner           ",
  " //   //  | 1.0.0               ",
  " ///////  |                     ",
  " //   //  | Alan Cândido        ",
  " //   //  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 9`] = `
[
  " //  | AC Banner           ",
  " //  | 1.0.0               ",
  " //  |                     ",
  " //  | Alan Cândido        ",
  " //  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 10`] = `
[
  "      //  | AC Banner           ",
  "      //  | 1.0.0               ",
  "      //  |                     ",
  " //   //  | Alan Cândido        ",
  "   /////  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 11`] = `
[
  " //    //  | AC Banner           ",
  " //   //   | 1.0.0               ",
  " /////     |                     ",
  " //   //   | Alan Cândido        ",
  " //    //  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 12`] = `
[
  " //       | AC Banner           ",
  " //       | 1.0.0               ",
  " //       |                     ",
  " //       | Alan Cândido        ",
  " ///////  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 13`] = `
[
  " ///     ///  | AC Banner           ",
  " ////   ////  | 1.0.0               ",
  " //  //// //  |                     ",
  " //    // //  | Alan Cândido        ",
  " //       //  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 14`] = `
[
  " ///    //  | AC Banner           ",
  " ////   //  | 1.0.0               ",
  " // //  //  |                     ",
  " //  // //  | Alan Cândido        ",
  " //   ////  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 15`] = `
[
  "  //////   | AC Banner           ",
  " //    //  | 1.0.0               ",
  " //    //  |                     ",
  " //    //  | Alan Cândido        ",
  "  //////   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 16`] = `
[
  " //////   | AC Banner           ",
  " //   //  | 1.0.0               ",
  " //////   |                     ",
  " //       | Alan Cândido        ",
  " //       | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 17`] = `
[
  "  //////    | AC Banner           ",
  " //     //  | 1.0.0               ",
  " //  /  //  |                     ",
  " // //  //  | Alan Cândido        ",
  "   //////   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 18`] = `
[
  " //////   | AC Banner           ",
  " //   //  | 1.0.0               ",
  " //////   |                     ",
  " //   //  | Alan Cândido        ",
  " //   //  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 19`] = `
[
  " //////  | AC Banner           ",
  " //      | 1.0.0               ",
  " //////  |                     ",
  "     //  | Alan Cândido        ",
  " //////  | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 20`] = `
[
  " //////  | AC Banner           ",
  "   //    | 1.0.0               ",
  "   //    |                     ",
  "   //    | Alan Cândido        ",
  "   //    | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 21`] = `
[
  " //    //  | AC Banner           ",
  " //    //  | 1.0.0               ",
  " //    //  |                     ",
  " //    //  | Alan Cândido        ",
  "  //////   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 22`] = `
[
  " //     //  | AC Banner           ",
  " //     //  | 1.0.0               ",
  " //     //  |                     ",
  "   //   //  | Alan Cândido        ",
  "    ////    | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 23`] = `
[
  " //       //  | AC Banner           ",
  " //       //  | 1.0.0               ",
  " //   /   //  |                     ",
  " //  ///  //  | Alan Cândido        ",
  "   ///  ///   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 24`] = `
[
  " //      //  | AC Banner           ",
  "   //  //    | 1.0.0               ",
  "    ///      |                     ",
  "  //  //     | Alan Cândido        ",
  " //     //   | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 25`] = `
[
  " //    //  | AC Banner           ",
  "  //   //  | 1.0.0               ",
  "   ////    |                     ",
  "    //     | Alan Cândido        ",
  "   //      | brodao@gmail.com    ",
]
`;

exports[`test build all supported characters in all fonts bar 26`] = `
[
  " //////  | AC Banner           ",
  "    //   | 1.0.0               ",
  "   //    |                     ",
  "  //     | Alan Cândido        ",
  " //////  | brodao@gmail.com    ",
]
`;
